src/objects/CTCT2__Settings__c.object
<CustomObject>
    <fields>
        <fullName>CTCT2__CTCT_Password__c</fullName>
        <inlineHelpText>This password is encrypted and cannot be read by any Salesforce user.</inlineHelpText>
        <label>CTCT Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCT2__CTCT_Username__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Your Constant Contact user name.  Click the Create an Account link if you do not have a Constant Contact account.</inlineHelpText>
        <label>CTCT Username</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CTCT2__Daily_Frequency__c</fullName>
        <label>Daily Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CTCT2__Sync_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Every 2 Hours</fullName>
                </value>
                <value>
                    <fullName>Every 4 Hours</fullName>
                </value>
                <value>
                    <fullName>Every 8 Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Day_Of_The_Month__c</fullName>
        <label>Day Of The Month</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CTCT2__Sync_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCT2__Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCT2__Monthly_Frequency__c</fullName>
        <label>Monthly Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CTCT2__Sync_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Specific day</fullName>
                </value>
                <value>
                    <fullName>Specific weekday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Monthly_On__c</fullName>
        <label>Monthly On</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CTCT2__Sync_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Of_Every_Month__c</fullName>
        <label>Of Every Month</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CTCT2__Sync_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Preferred_Start_Hour__c</fullName>
        <formula>CASE( CTCT2__Preferred_Start_Time__c , &quot;12:00 AM&quot;, &quot;00&quot;,
&quot;1:00 AM&quot;, &quot;01&quot;,
&quot;2:00 AM&quot;, &quot;02&quot;,
&quot;3:00 AM&quot;, &quot;03&quot;,
&quot;4:00 AM&quot;, &quot;04&quot;,
&quot;5:00 AM&quot;, &quot;05&quot;,
&quot;6:00 AM&quot;, &quot;06&quot;,
&quot;7:00 AM&quot;, &quot;07&quot;,
&quot;8:00 AM&quot;, &quot;08&quot;,
&quot;9:00 AM&quot;, &quot;09&quot;,
&quot;10:00 AM&quot;, &quot;10&quot;,
&quot;11:00 AM&quot;, &quot;11&quot;,
&quot;12:00 PM&quot;, &quot;12&quot;,
&quot;1:00 PM&quot;, &quot;13&quot;,
&quot;2:00 PM&quot;, &quot;14&quot;,
&quot;3:00 PM&quot;, &quot;15&quot;,
&quot;4:00 PM&quot;, &quot;16&quot;,
&quot;5:00 PM&quot;, &quot;17&quot;,
&quot;6:00 PM&quot;, &quot;18&quot;,
&quot;7:00 PM&quot;, &quot;19&quot;,
&quot;8:00 PM&quot;, &quot;20&quot;,
&quot;9:00 PM&quot;, &quot;21&quot;,
&quot;10:00 PM&quot;, &quot;22&quot;,
&quot;11:00 PM&quot;, &quot;23&quot;, &quot;00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Military time representation of preferred start time.</inlineHelpText>
        <label>Preferred Start Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCT2__Preferred_Start_Time__c</fullName>
        <inlineHelpText>Exact start time will depend on job queue activity.</inlineHelpText>
        <label>Preferred Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCT2__ScheduledJobId__c</fullName>
        <label>ScheduledJobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCT2__Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCT2__Sync_Frequency__c</fullName>
        <label>Sync Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Sync</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCT2__Sync_Opt_Out_From_CTCT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contacts who opt out in Constant Contact will be marked as opting out in Salesforce.  Contacts who opt in in Constant Contact will be marked as opting in in Salesforce.</inlineHelpText>
        <label>Sync Opt Out From CTCT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCT2__Sync_Opt_Out_To_CTCT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contacts who opt out in Salesforce will be marked as opting out in Constant Contact.  Contacts who opt in in Salesforce WILL NOT be marked as opting in in Constant Contact.</inlineHelpText>
        <label>Sync Opt Out To CTCT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCT2__Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCT2__Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCT2__Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Constant Contact Settings</label>
    <listViews>
        <fullName>CTCT2__All</fullName>
        <columns>NAME</columns>
        <columns>CTCT2__CTCT_Username__c</columns>
        <columns>CTCT2__Sync_Frequency__c</columns>
        <columns>CTCT2__Daily_Frequency__c</columns>
        <columns>CTCT2__Monthly_On__c</columns>
        <columns>CTCT2__Of_Every_Month__c</columns>
        <columns>CTCT2__Day_Of_The_Month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Set-{0}</displayFormat>
        <label>Setting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Constant Contact Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>